# TOKENGATE

./: .gitignore  Dockerfile  README.md  pyproject.toml  tokengate.md  tokengate.yaml
docs/superpowers/plans/: 2026-06-12-tokengate-phase1.md  2026-06-15-tokengate-phase2.md  2026-07-03-tokengate-phase4.md
docs/superpowers/specs/: 2026-06-12-tokengate-phase1-design.md  2026-06-15-tokengate-phase2-design.md  2026-06-16-tokengate-phase3-design.md  2026-07-03-tokengate-phase4-design.md
scripts/: install.sh  retrain_router.py
tests/: conftest.py  test_analytics.py  test_budgeter.py  test_caching.py  test_cli.py  test_context.py  test_distiller.py  test_normalize.py  test_proxy.py  test_router.py  test_security.py  test_streaming.py  test_tokens.py
tokengate/analytics/: dashboard.html  db.py  stats.py
tokengate/cli/: daemon.py  main.py  wizard.py
tokengate/core/: config.py  context.py  mock_provider.py  normalize.py  provider.py  tokens.py
tokengate/layers/: budgeter.py  distiller.py  exact_cache.py  router.py  semantic_cache.py
tokengate/proxy/: server.py
