[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rait-tokengate"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "typer>=0.15",
    "rich>=13",
    "pyyaml>=6",
    "psutil>=6",
]

[project.scripts]
rait = "tokengate.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "anyio[trio]>=4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["tokengate"]
